--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,50 @@
 body{
-  margin: 0;
+  border: 1px solid black;
   display: flex;
+  flex-wrap: wrap;
+  height: 100%;
 }
+
 div{
   border: 1px solid black;
+}
+
+.title{
+  height: 30%;
+  width: 100vw;
+  text-align: center;
+}
+
+.container{
+  text-align: center;
+  font-size: 50px;
+  width: 49.8%;
+  height: 100%;
+}
+
+.label-input{
+  font-size: 50px;
+  display: block;
+  margin-bottom: 20px;
+}
+
+.input-container{
+  width: 70%;
+  height: fit-content;
+  display: flex;
+  flex-flow: row;
+  margin: auto;
+  border: none;
+}
+
+.text-input{
   width: 50%;
+  height: 25px;
+  font-size: 50%;
+}
+
+.submit-button{
+  width: 50%;
+  height: 31px;
+  font-size: 35%;
 }
