--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body{
   /* border: 1px solid black; */
-  display: flex;
+  display: block;
   flex-wrap: wrap;
   height: 100%;
 }
@@ -9,16 +9,14 @@ div{
   border: 1px solid black;
 }
 
-.title{
-  height: 30%;
-  width: 99.2%;
-  text-align: center;
+#recharge-calc{
+  display: none;
 }
 
 .container{
   text-align: center;
   font-size: 50px;
-  width: 49.5%;
+  width: 100%;
   height: 100%;
 }
 
@@ -29,7 +27,7 @@ div{
 }
 
 .input-container{
-  width: 70%;
+  width: 300px;
   height: fit-content;
   display: flex;
   flex-flow: row;
@@ -47,4 +45,53 @@ div{
   width: 50%;
   height: 31px;
   font-size: 35%;
+}
+
+/* For the toggle button */
+
+.title{
+  display: flex;
+  height: 30%;
+  width: 100%;
+  text-align: center;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+#toggle-text{
+  border: 1px solid black;
+  margin-right: 10px;
+}
+
+#title-text{
+  width: 100%;
+  align-items: center;
+  border: 1px solid black;
+}
+
+.toggle-container{
+  display: flex;
+  align-self: center;
+  width: 60px;
+  height: 30px;
+  cursor: pointer;
+  user-select: none;
+}
+
+.toggle-button{
+  width: 100%;
+  height: 100%;
+  border-radius: 20px 20px 20px 20px;
+  background-color: gray;
+}
+
+.inner-circle{
+  position: relative;
+  left: 0px;
+  top: 1px;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background-color: white;
+  transition: all .2s ease-in-out;
 }
